tests/paczka2/big_fuzzy/99234637.err
Error in line 7: FWYoA A571 15,2
Error in line 8: FYzk A571 87,2
Error in line 21: S85tjc A571 2,1
Error in line 26: FYzk A933 19,6
Error in line 29: ksX9q8nm A571 57,3
Error in line 42: ksX9q8nm A173 93,7
Error in line 49: FYzk A571 11,7
Error in line 67: A173 A933 28,0
Error in line 74: A173 A993 3,05
Error in line 72: A173 A993 31,7
Error in line 69: zaUFs A993 4,9
Error in line 64: FYzk A173 33,3
Error in line 91: ksX9q8nm A173 24,7
Error in line 97: zaUFs A993 6,8
Error in line 102: FWYoA A993 81,0
Error in line 114: FWYoA A571 56,0
Error in line 116: FYzk A173 88,4
Error in line 111: S85tjc A571 221,5
Error in line 101: ksX9q8nm A571 87,5
Error in line 128: FYzk A933 94,0
Error in line 130: FWYoA A933 60,9
Error in line 147: S85tjc A173 12,0
Error in line 141: zaUFs A173 81,0
Error in line 157: zaUFs A933 54,7
Error in line 164: FYzk A993 32,19
Error in line 160: cTyTCojX3i A993 62,6
Error in line 172: ksX9q8nm A173 28,2
Error in line 161: A173 A173 30,5
Error in line 178: FWYoA A933 9,5
Error in line 177: cTyTCojX3i A571 16,0
Error in line 176: ksX9q8nm A173 38,7
Error in line 168: FYzk A993 8,2
Error in line 194: S85tjc A173 20,6
Error in line 206: A173 A993 12,6
Error in line 201: S85tjc A993 100,0
Error in line 213: A173 A173 48,9
Error in line 221: zaUFs A173 79,4
Error in line 227: zaUFs A933 57,7
Error in line 235: S85tjc A993 77,2
Error in line 239: ksX9q8nm A933 80,9
